implement the mapstruct and lombok